--- a/embed/requirements.txt
+++ b/embed/requirements.txt
@@ -16,6 +16,8 @@ exceptiongroup==1.2.2
 fastapi==0.115.12
 filelock==3.18.0
 fsspec==2025.3.2
+grpcio==1.71.0
+grpcio-tools==1.71.0
 h11==0.14.0
 httptools==0.6.4
 huggingface-hub==0.30.2
@@ -35,7 +37,7 @@ numpy==2.0.2
 packaging==24.2
 pillow==11.1.0
 preshed==3.0.9
-protobuf==6.30.2
+protobuf==5.29.4
 pydantic==2.11.3
 pydantic_core==2.33.1
 Pygments==2.19.1
